# ReL4

./: README.md  rust-toolchain.toml
common/src/: config.rs  lib.rs  message.rs  object.rs  register.rs  types.rs  utils.rs
os/: Cargo.toml  Makefile
os/src/: config.rs  entry.asm  linker-qemu.ld  logging.rs  main.rs  sbi.rs  types.rs  utils.rs
os/src/boot/: boot_info.rs  init_freemem.rs  mod.rs  ndks_boot.rs
os/src/cspace/: cap.rs  cap_data.rs  cnode.rs  mdb.rs  mod.rs
os/src/cspace/cap_fn/: asid_control.rs  asid_pool.rs  cnode.rs  domain.rs  endpoint.rs  frame.rs  irq_control.rs  irq_handler.rs  mod.rs  notification.rs  null.rs  page_table.rs  reply.rs  thread.rs  untyped.rs  zombie.rs
os/src/inner_syscall/: invocation.rs  mod.rs  slowpath.rs  syscall.rs  tcb.rs  untyped.rs  vspace.rs
os/src/interrupt/: mod.rs  timer.rs
os/src/ipc/: ipc_buf.rs  mod.rs
os/src/mm/: address.rs  asid.rs  mod.rs  page_table.rs  region.rs
os/src/root_server/: mod.rs  root_server.rs
os/src/scheduler/: domain_schedule.rs  endpoint.rs  mod.rs  register.rs  scheduler.rs  tcb.rs
os/src/syscall/: invocation.rs  mod.rs  slowpath.rs
os/src/trap/: mod.rs  trap.asm
os/src/untyped/: mod.rs  untyped.rs
os/src/vspace/: mod.rs
root_server/: Cargo.toml  Makefile
root_server/src/: config.rs  entry.asm  lang_item.rs  lib.rs  linker.ld
syscall/: Cargo.toml
syscall/src/: console.rs  lib.rs  message.rs  syscall.rs
user/: Cargo.toml  Makefile
user/src/: lang_item.rs  lib.rs
user_lib/: Cargo.toml
user_lib/src/: console.rs  lib.rs  thread.rs  untyped.rs  vspace.rs
