[package]
name = "os"
version = "0.1.0"
authors = ["CtrlZ <ctrlz.donghai@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
bitflags = "1.2.1"
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
    "inline-asm",
] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = { version = "0.9", features = ["use_ticket_mutex"] }
syscall = { path = "../syscall" }
common = { path = "../common" }
[profile.release]
debug = true
