[package]
name = "root_server"
authors = ["CtrlZ <ctrlz.donghai@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_lib = { path = "../user_lib" }
common = { path = "../common" }

[profile.release]
debug = true
